2006-07-20  Jeremy Cribb <jcribb@email.unc.edu>
	* forces2d.m: added.  computes 2d forces on beads in Newtonian fluid using Stokes drag.
	* forcecal2d.m:  simplified code by using forces2d and bin2d.
	
2006-07-13  Jeremy Cribb <jcribb@email.unc.edu>
	* varforcecal.  added this folder.

2006-06-05  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: removed bug that crashed function when no data existed for a particular tracker.

2005-10-31  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: better derivative handling, added plot.

2005-10-06  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: added x and y positions to output.  Changed output plots for better representation of data.  changed handling of filenames to be more dependable.

2005-09-13  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: added x and y positions to output.

2005-09-01  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: changed window_size to be an input parameter.  This changes the "tau" value for derivative determination.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* laser_forcecal.m: re-added drift subtraction.  updated documentation.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: added exception handling to MIP loader, incase the Minimum Intensity Projection images do not exist.

2005-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* laser_forcecal.m: added drift subtraction.  added documentation.

2005-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* laser_forcecal.m: added.  Performs force calibration routine and returns a table describing forces measured with respect to voltage applied to coils.  requires user to identify 'dominant coil' used in experimental process.
	* extract_magnet_log: added textual output describing timing between magnet and tracking log files.

2005-07-19  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: Corrected documentation.